Adding a flag to enable and disable debug prints
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/branches/version05@1363 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/configure.ac
+++ b/configure.ac
@@ -6,10 +6,16 @@ AC_DEFINE([VERSION_MICRO], 1)
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall 1.11 silent-rules foreign])
 AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_FILES([Makefile])
 
 AC_PROG_CC_C_O
 AM_DISABLE_STATIC
 LT_INIT
 
-AC_CONFIG_FILES([Makefile])
+AC_ARG_ENABLE([debug],
+	[AS_HELP_STRING([--enable-debug], [will print debugging information during runtime @<:@default=disabled@:>@])],
+	[AC_DEFINE([DEBUG])],
+	[AC_DEFINE([NDEBUG])]
+)
+
 AC_OUTPUT
