--- a/Makefile.am
+++ b/Makefile.am
@@ -1,11 +1,11 @@
 ACLOCAL_AMFLAGS = -I m4
 
 lib_LTLIBRARIES = libcap_utils.la
+nobase_include_HEADERS = cap_utils.h
 
 libcap_utils_la_LDFLAGS = -shared -version-info 0:0:0
 libcap_utils_la_CFLAGS = -Wall
 libcap_utils_la_SOURCES = \
-	cap_utils.h \
 	closestream.c \
 	createfilter.c \
 	createstream.c \
