starting to add a stream backend system to clean up this code
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/branches/version05@1393 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,8 @@ libcap_utils_la_SOURCES = \
 	filter.c \
 	openstream.c \
 	readpost.c \
-	spectopico.o \
+	spectopico.c \
+	stream_file.c \
 	timecmp.c \
 	valtopico.c \
 	writepost.c
