adding tcp stream sourcefile
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/branches/version05@1400 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,7 @@ libcap_utils_la_SOURCES = \
 	stream_ethernet.c \
 	stream_file.c \
 	stream_udp.c \
+	stream_tcp.c \
 	timecmp.c \
 	valtopico.c \
 	writepost.c
