--- a/configure.ac
+++ b/configure.ac
@@ -6,9 +6,10 @@ AC_DEFINE([VERSION_MICRO], 1)
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall 1.11 silent-rules foreign])
 AC_CONFIG_MACRO_DIR([m4])
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([cap_utils.pc Makefile])
 
 AC_PROG_CC_C_O
+AC_PROG_CC_C99
 AM_DISABLE_STATIC
 LT_INIT
 
