adding custom error codes
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1485 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,9 +14,11 @@ pkgconfig_DATA = cap_utils.pc
 libcap_utils_la_LDFLAGS = -shared -version-info 0:1:0
 libcap_utils_la_CFLAGS = -Wall
 libcap_utils_la_SOURCES = \
+	caputils_int.h \
 	closestream.c \
 	createfilter.c \
 	createstream.c \
+	error.c \
 	ethaton.c \
 	filter.c \
 	openstream.c \
