splitting to multiple headers
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1486 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,9 +3,14 @@ ACLOCAL_AMFLAGS = -I m4
 lib_LTLIBRARIES = libcap_utils.la
 bin_PROGRAMS = capinfo
 
-nobase_include_HEADERS = \
+nobase_include_HEADERS =    \
+	caputils/picotime.h \
+	caputils/file.h     \
+	caputils/utils.h    \
+	caputils/capture.h  \
+	caputils/filter.h   \
 	caputils/caputils.h \
-	caputils/stream.h \
+	caputils/stream.h   \
 	caputils/version.h
 
 pkgconfigdir = $(libdir)/pkgconfig
