splitting struct and using callback, this breaks pretty much everything but the aim is cleaner and more maintainable code
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1489 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,13 +30,15 @@ libcap_utils_la_SOURCES = \
 	readpost.c \
 	spectopico.c \
 	stream.c \
-	stream_ethernet.c \
 	stream_file.c \
-	stream_udp.c \
-	stream_tcp.c \
 	timecmp.c \
 	valtopico.c \
 	writepost.c
+
+# 	stream_ethernet.c \
+#	stream_udp.c \
+#	stream_tcp.c \
+#
 
 capinfo_CFLAGS = -Wall
 capinfo_LDADD = libcap_utils.la
