--- a/Makefile.am
+++ b/Makefile.am
@@ -30,12 +30,12 @@ libcap_utils_la_SOURCES = \
 	readpost.c \
 	spectopico.c \
 	stream.c \
+	stream_ethernet.c \
 	stream_file.c \
 	timecmp.c \
 	valtopico.c \
 	writepost.c
 
-# 	stream_ethernet.c \
 #	stream_udp.c \
 #	stream_tcp.c \
 #
