--- a/caputils/version.h.in
+++ b/caputils/version.h.in
@@ -1,3 +1,4 @@
 #define CAPUTILS_VERSION_MAJOR @VERSION_MAJOR@
 #define CAPUTILS_VERSION_MINOR @VERSION_MINOR@
+#define CAPUTILS_VERSION_MICRO @VERSION_MICRO@
 #define CAPUTILS_VERSION "@VERSION@"
