--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ AC_DEFINE_UNQUOTED([VERSION_MINOR], [${VERSION_MINOR}])
 AC_DEFINE_UNQUOTED([VERSION_MICRO], [${VERSION_MICRO}])
 AC_SUBST([VERSION_MAJOR])
 AC_SUBST([VERSION_MINOR])
+AC_SUBST([VERSION_MICRO])
 
 AC_CONFIG_AUX_DIR([build-aux])
 AM_INIT_AUTOMAKE([-Wall 1.11 silent-rules foreign])
