starting to move filter a new library: libcap_filter
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1861 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
-lib_LTLIBRARIES = libcap_utils.la
+lib_LTLIBRARIES = libcap_utils.la libcap_filter.la
 bin_PROGRAMS = capinfo
 
 nobase_include_HEADERS =    \
@@ -14,18 +14,16 @@ nobase_include_HEADERS =    \
 	caputils/version.h
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = cap_utils.pc
+pkgconfig_DATA = cap_utils.pc cap_filter.pc
 
-libcap_utils_la_LDFLAGS = -shared -version-info 0:1:0
+libcap_utils_la_LDFLAGS = -version-info 1:0:0
 libcap_utils_la_CFLAGS = -Wall
 libcap_utils_la_SOURCES = \
 	caputils_int.h \
 	closestream.c \
-	createfilter.c \
 	createstream.c \
 	error.c \
 	ethaton.c \
-	filter.c \
 	openstream.c \
 	readpost.c \
 	spectopico.c \
@@ -40,5 +38,9 @@ libcap_utils_la_SOURCES = \
 #	stream_tcp.c \
 #
 
+libcap_filter_la_LDFLAGS = -version-info 0:0:0
+libcap_filter_la_CFLAGS = -Wall
+libcap_filter_la_SOURCES = createfilter.c filter.c
+
 capinfo_CFLAGS = -Wall
-capinfo_LDADD = libcap_utils.la
+capinfo_LDADD = libcap_utils.la libcap_filter.la
