adaping createfilter to match api changes
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@1862 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,13 +25,11 @@ libcap_utils_la_SOURCES = \
 	error.c \
 	ethaton.c \
 	openstream.c \
+	picotime.c \
 	readpost.c \
-	spectopico.c \
 	stream.c \
 	stream_ethernet.c \
 	stream_file.c \
-	timecmp.c \
-	valtopico.c \
 	writepost.c
 
 #	stream_udp.c \
