starting a proper implementation of capdump
git-svn-id: svn://sidvind.com/project/BTH/NPLDP/libcap_utils/trunk@2002 8459abcf-8237-4014-9f1e-057f68ddaf13

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,7 @@ capinfo_CFLAGS = -Wall
 capinfo_LDADD = libcap_utils.la libcap_filter.la
 
 capdump_CFLAGS = -Wall
-capdump_LDADD = libcap_utils.la
+capdump_LDADD = libcap_utils.la libcap_filter.la
 
 capfilter_CFLAGS = -Wall
 capfilter_LDADD = libcap_filter.la libcap_utils.la
