--- a/libcap_filter-0.7.pc.in
+++ b/libcap_filter-0.7.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@
 Name: libcap_filter
 Description: Part of libcap_utils. Deals with packet filtering.
 Version: @VERSION@
-Libs: -L${libdir} -lcap_filter
+Libs: -L${libdir} -lcap_filter-07
 Cflags: -I${includedir}
