--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 m4_define([__VERSION_MAJOR__], [0])
 m4_define([__VERSION_MINOR__], [7])
-m4_define([__VERSION_MICRO__], [3])
+m4_define([__VERSION_MICRO__], [4])
 
 AC_INIT([libcap_utils],[__VERSION_MAJOR__.__VERSION_MINOR__.__VERSION_MICRO__],[dsv@bth.se])
 
@@ -23,6 +23,8 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
 	libcap_filter-0.7.pc
 	libcap_stream-0.7.pc
+	libcap_marc-0.7.pc
+	libcap_utils-0.7.pc
 	caputils/version.h
 	Makefile
   dist/deb-control
