started with capmarker

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 ACLOCAL_AMFLAGS = -I m4
+AM_CFLAGS = -Wall
 
 lib_LTLIBRARIES = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la libcap_marc-07.la
 bin_PROGRAMS = 
@@ -24,6 +25,11 @@ endif
 if BUILD_CAPFILTER
 bin_PROGRAMS += capfilter
 man1_MANS += man/capfilter.1
+endif
+
+if BUILD_CAPFILTER
+bin_PROGRAMS += capmarker
+man1_MANS += man/capmarker.1
 endif
 
 notrans_dist_man_MANS =     \
@@ -56,7 +62,6 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libcap_stream-0.7.pc libcap_filter-0.7.pc libcap_utils-0.7.pc libcap_marc-0.7.pc
 
 libcap_stream_07_la_LDFLAGS = -version-info 0:0:0
-libcap_stream_07_la_CFLAGS = -Wall
 libcap_stream_07_la_LIBADD = libcap_utils-07.la libcap_filter-07.la
 libcap_stream_07_la_SOURCES =  \
 	stream.c stream.h   \
@@ -64,7 +69,6 @@ libcap_stream_07_la_SOURCES =  \
 	stream_file.c
 
 libcap_utils_07_la_LDFLAGS = -version-info 0:0:0
-libcap_utils_07_la_CFLAGS = -Wall
 libcap_utils_07_la_SOURCES =   \
 	caputils_int.h      \
 	address.c           \
@@ -78,35 +82,26 @@ libcap_utils_07_la_SOURCES =   \
 #
 
 libcap_filter_07_la_LDFLAGS = -version-info 0:0:0
-libcap_filter_07_la_CFLAGS = -Wall
 libcap_filter_07_la_LIBADD = libcap_utils-07.la
 libcap_filter_07_la_SOURCES = createfilter.c filter.c
 
 libcap_marc_07_la_LDFLAGS = -shared -version-info 0:0:0
-libcap_marc_07_la_CFLAGS = -Wall ${libcap_filter_CFLAGS}
+libcap_marc_07_la_CFLAGS = ${AM_CFLAGS} ${libcap_filter_CFLAGS}
 libcap_marc_07_la_SOURCES = marc.c
 
-pcap2cap_CFLAGS = -Wall
 pcap2cap_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la ${PCAP_LIBS}
-
-cap2pcap_CFLAGS = -Wall
 cap2pcap_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la ${PCAP_LIBS}
-
-capinfo_CFLAGS = -Wall
 capinfo_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la
-
-capdump_CFLAGS = -Wall
 capdump_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la
-
-capfilter_CFLAGS = -Wall
 capfilter_LDADD = libcap_filter-07.la libcap_utils-07.la
+capmarker_LDADD = libcap_filter-07.la libcap_utils-07.la
 
-tests_filter_argv_CXXFLAGS = -Wall $(CPPUNIT_CFLAGS)
+tests_filter_argv_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS)
 tests_filter_argv_LDFLAGS = $(CPPUNIT_LIBS)
 tests_filter_argv_LDADD = libcap_filter-07.la libcap_utils-07.la
 tests_filter_argv_SOURCES = tests/filter_argv.cpp
 
-tests_address_CXXFLAGS = -Wall $(CPPUNIT_CFLAGS)
+tests_address_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS)
 tests_address_LDFLAGS = $(CPPUNIT_LIBS)
 tests_address_LDADD = libcap_utils-07.la
 tests_address_SOURCES = tests/address.cpp
