--- a/configure.ac
+++ b/configure.ac
@@ -63,6 +63,7 @@ AS_IF([test "x$with_pcap" != "xno"], [
 AC_ARG_ENABLE([capdump], [AS_HELP_STRING([--enable-capdump], [Build capdump utility (record a stream) @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([capinfo], [AS_HELP_STRING([--enable-capinfo], [Build capinfo utility (show info about a stream) @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([capfilter], [AS_HELP_STRING([--enable-capfilter], [Build capfilter utility (filter existing stream) @<:@default=enabled@:>@])])
+AC_ARG_ENABLE([capmarker], [AS_HELP_STRING([--enable-capmarker], [Build capmarker utility @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([utils], [AS_HELP_STRING([--enable-utils], [By default all utils are build, this flag disables all utils unless they are explicitly enabled.])])
 
 utils_unset="x"
@@ -73,6 +74,7 @@ AS_IF([test "x$enable_utils" == "xno"], [
 AM_CONDITIONAL([BUILD_CAPDUMP],   [test "x$enable_capdump"   == "xyes" -o "x$enable_capdump"   == $utils_unset])
 AM_CONDITIONAL([BUILD_CAPINFO],   [test "x$enable_capinfo"   == "xyes" -o "x$enable_capinfo"   == $utils_unset])
 AM_CONDITIONAL([BUILD_CAPFILTER], [test "x$enable_capfilter" == "xyes" -o "x$enable_capfilter" == $utils_unset])
+AM_CONDITIONAL([BUILD_CAPMARKER], [test "x$enable_capmarker" == "xyes" -o "x$enable_capmarker" == $utils_unset])
 
 AM_PATH_CPPUNIT(1.9.6,,[AC_MSG_NOTICE([cppunit not found, tests disabled])])
 AM_CONDITIONAL([BUILD_TESTS], [test "x$no_cppunit" != "xyes"])
