--- a/configure.ac
+++ b/configure.ac
@@ -48,9 +48,12 @@ int foo(void){ uint64_t x = be64toh((uint64_t)0); }
 ])], [
   AC_MSG_RESULT([yes])
   AC_DEFINE([HAVE_BE64TOH], [], [Define to 1 if you have the be64toh function.])
+  BE64TOH="yes"
 ], [
   AC_MSG_RESULT([no])
+  BE64TOH="no"
 ])
+AM_CONDITIONAL([BUILD_BE64TOH], [test "x$BE64TOH" != "xyes"])
 CPPFLAGS="$saved_CPPFLAGS"
 AC_LANG_POP
 
