Adding large-file support.

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ AC_PROG_CXX
 AC_USE_SYSTEM_EXTENSIONS
 AC_DISABLE_STATIC([])
 LT_INIT
+AC_SYS_LARGEFILE
 
 AC_LANG_PUSH([C])
 AC_MSG_CHECKING([be64toh])
