--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,7 @@ AC_CONFIG_FILES([
 AC_PROG_CC_C_O
 AC_PROG_CC_C99
 AC_PROG_CXX
+AC_PROG_LN_S
 AC_USE_SYSTEM_EXTENSIONS
 AC_DISABLE_STATIC([])
 LT_INIT
