Adding function to subtract picotime.

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,7 @@ notrans_dist_man_MANS =     \
 	man/capshow.1
 
 if BUILD_TESTS
-TESTS = tests/filter_argv tests/address tests/endian
+TESTS = tests/filter_argv tests/address tests/endian tests/timepico
 else
 TESTS = tests/disabled
 endif
@@ -128,6 +128,11 @@ tests_endian_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS)
 tests_endian_LDFLAGS = $(CPPUNIT_LIBS)
 tests_endian_LDADD = libcap_utils-07.la
 tests_endian_SOURCES = tests/endian.cpp be64toh.c
+
+tests_timepico_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS)
+tests_timepico_LDFLAGS = $(CPPUNIT_LIBS)
+tests_timepico_LDADD = libcap_utils-07.la
+tests_timepico_SOURCES = tests/timepico.cpp
 
 tests_disabled_SOURCES = tests/disabled.cpp
 
