--marker takes a port number.

--- a/Makefile.am
+++ b/Makefile.am
@@ -107,7 +107,7 @@ cap2pcap_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la ${PC
 capinfo_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la
 capdump_LDADD = libcap_utils-07.la libcap_filter-07.la libcap_stream-07.la
 capfilter_LDADD = libcap_filter-07.la libcap_utils-07.la
-capmarker_LDADD = libcap_filter-07.la libcap_utils-07.la
+capmarker_LDADD = libcap_utils-07.la
 capshow_LDADD = libcap_filter-07.la libcap_utils-07.la libcap_stream-07.la
 
 tests_filter_argv_CXXFLAGS = ${AM_CFLAGS} $(CPPUNIT_CFLAGS)
